 - Fixed bug in AWS authentication algorithm if no AMZ_* header present. Reported by Mikkel Jensen.
 - Patched Simple connector to not return a "Content-length" header when size is 0.
 - Bug bug in the Simple connector causing a "Transfer-Encoding: chunked" header to be returned even if no entity was present. May be the cause of problems with the Safari browser.

[API breaking changes]
 - Moved Atom, FreeMarker and FileUpload extensions to org.restlet.ext.atom/freemarker/fileupload packages.
 - Moved implementation-independent classes from NRE into org.restlet packages. 
 - Renamed LogService."loggerName" and "format" properties to add the "access" prefix. Added "contextLoggerName" property.
 - Moved Resource and Representation to new org.restlet.resource package.
 - Moved *Service classes to new org.restlet.service package.
 - Renamed RedirectRestlet into org.restlet.Redirector.
 - Renamed ExtractFilter into org.restlet.Extractor.
 - Renamed TunnelFilter into org.restlet.Tunnel.
 - Moved StringTemplate data model to org.restlet.util.Model. Removed ReadableModel and WritableModel.
 - Replace Representation.toString() by getValue() to prevent unwanted consumption of the content. Reported by Vincent Lari.
 	Note that getValue() throws IOException instead of eating them as to older toString() implementation. 
 - Refactored TunnelFilter into a TunnelService enabled by default. 
 - Also refactored and renamed LocalService into MetadataService used by the TunnelService and local client connectors.
 - Refactored VirtualClient interface into a Dispatcher class. Renamed Context.getClient() into getDispatcher().

[Other changes] 
 - Reorganized Javadocs into three parts: Restlet API, Restlet Extensions, Noelios Restlet Engine.
 - Added JSON library as an external plugin project. See http://www.json.org
 - Added org.restlet.ext.json extension to manipulate JSON representations.
 - Added MediaType.APPLICATION_JSON and added entry for "*.json" in common extensions.