@@ -55,28 +55,16 @@
    <ul>
       <li>2006 Q4
          <ul>
-            <li>Beta 20 release
-               <ul>
-                  <li><s>Support extraction of segments (#120)</s></li>
-                  <li><s>Add support for JSON (#131)</s></li>
-                  <li><s>Support attributes in CallModel (#146)</s></li>
-                  <li><s>Add support for Amazon Web Services authentication scheme</s></li>
-                  <li><s>Extract implementation-independent extensions from NRE into a separate sub-project</s></li>
-                  <li><s>Support the 300 HTTP status (#110)</s></li>
-                  <li>Support tunnelling of extensions (#147)</li>
-                  <li>Add input/output converter (#151)</li>
-                  <li>Add support for URI templates (#162)</li>
-               </ul>
-            </li>
-         </ul>
-         <ul>
             <li>Beta 21 release
                <ul>
+                  <li>Add JMX management (#17)</li>
                   <li>Allow language forcing even if extension found (#39)</li>
                   <li>Refactor JdbcClient (#104)</li>
                   <li>Autoredirect directory URIs (#113)</li>
-                  <li>Review support for HTTP (#130)</li>
+                  <li>Review support for HTTP (#124)</li>
                   <li>Support application redirect (#172)</li>
+                  <li>Dynamically find Handler.handle* methods (#181)</li>
+                  <li>Delete files doesn't delete all variants (#182)</li>
                   <li>Support Vary headers (#109)</li>
                   <li>Add XsltFilter (#112)</li>
                   <li>Review our support for content negotiation (#123)</li>
@@ -138,7 +126,7 @@
 <br/>
 
 <small>
-   Last modified on 2006-10-30. Copyright &copy; 2005-2006 <a href="mailto:contact@noelios.com">J&eacute;r&ocirc;me Louvel</a>. Restlet is a registered trademark of <a target="_top" href="http://www.noelios.com">Noelios Consulting</a>.
+   Last modified on 2006-11-06. Copyright &copy; 2005-2006 <a href="mailto:contact@noelios.com">J&eacute;r&ocirc;me Louvel</a>. Restlet is a registered trademark of <a target="_top" href="http://www.noelios.com">Noelios Consulting</a>.
 </small>
 
 </body>
