@@ -13,6 +13,7 @@ Changes log
  - Fixed bug in AWS authentication algorithm if no AMZ_* header present. Reported by Mikkel Jensen.
  - Patched Simple connector to not return a "Content-length" header when size is 0.
  - Bug bug in the Simple connector causing a "Transfer-Encoding: chunked" header to be returned even if no entity was present. May be the cause of problems with the Safari browser.
+ - Fixed issue with StringRepresentation wrongly computing its length in certain cases. Reported by Richard G.
 
 [API breaking changes]
  - Moved Atom, FreeMarker and FileUpload extensions to org.restlet.ext.atom/freemarker/fileupload packages.
@@ -68,6 +69,8 @@ Changes log
  - Moved "indexName" property from Directory to MetadataService (remove the previous "indexNames" list).
  - Added "converterService" to Application to converts between Representations and higher-level Objects (like JDOM documents, etc.). 
    Suggested by Chris Winters.
+ - Added support for URI templates to facilitate the routing of dynamic URIs. 
+ - Reworked tutorial part 11 to illustrate usage of URI templates.
  
 1.0 beta 19 (2006-10-23)
 [Bugs fixed]
